update v1.0.5, changes to class details endpoint and response edits
